config-k8s/defTelemetry/zipkin/destinationRule-def.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: zipkin-distination
  namespace: istio-system
spec:
  host: zipkin
  trafficPolicy:
    tls:
      mode: DISABLE
